# pqdevnet-observatory

./: .gitignore  AGENTS.md  README.md  _quarto-publish.yml  _quarto.yml  custom.scss  index.qmd  justfile  lean-pipeline.yaml  pipeline.yaml  pqdevnet-pipeline.yaml  pyproject.toml
.github/workflows/: build-book.yml  build-site.yml  daily.yml  fetch-data.yml  pqdevnet-sync.yml  sync.yml
notebooks/: 01-blob-inclusion.ipynb  01-blob-inclusion.qmd  02-blob-flow.ipynb  02-blob-flow.qmd  03-column-propagation.ipynb  03-column-propagation.qmd  04-mempool-visibility.ipynb  loaders.py
notebooks/pqdevnet/: 01-pq-signature-performance.ipynb  02-resource-utilization.ipynb  03-consensus.ipynb  04-networking.ipynb  05-state-transitions.ipynb  06-aggregation-performance.ipynb
peerdas/: 02-blob-flow.ipynb
queries/: __init__.py  blob_flow.py  blob_inclusion.py  column_propagation.py  mempool_visibility.py
scripts/: fetch_data.py  generate_historical_index.py  prepare_publish.py  render_historical.py
scripts/pqdevnet/: detect_devnets.py  fetch_data_prometheus.py  render_notebooks.py
site/src/components/: DateNav.astro  DevnetNav.astro  Icon.astro  MobileNav.astro  MobileNav.tsx  NotebookEmbed.astro  Sidebar.astro  TableOfContents.astro
site/src/components/ui/: sheet.tsx
site/src/layouts/: BaseLayout.astro  DevnetLayout.astro  NotebookLayout.astro
site/src/lib/: PQDevnetSiteData.ts  SiteData.ts  data.ts
site/src/pages/: index.astro
site/src/pages/data/: index.astro
site/src/styles/: global.css  notebook.css
worker/src/: index.ts
(+5 files in other folders)
